--- a/index.html
+++ b/index.html
@@ -22,4 +22,105 @@
         /* HERO */
         .container { max-width: 1200px; margin: 30px auto; padding: 0 20px; }
         .hero { background: linear-gradient(135deg, #1e293b, #0f172a); border: 1px solid rgba(255,255,255,0.1); padding: 60px 20px; border-radius: 30px; text-align: center; margin-bottom: 40px; }
-        .id-input { background: rgba(255
+        .id-input { background: rgba(255,255,255,0.05); border: 2px solid var(--accent); color: white; padding: 15px; width: 300px; border-radius: 12px; font-size: 1.1rem; text-align: center; margin: 20px 0; }
+        .v-btn { background: var(--accent); color: #0f172a; border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
+
+        /* GRID */
+        .section-h { font-size: 1.8rem; margin: 40px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; color: #fff; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 20px; }
+        .card { background: rgba(30, 41, 59, 0.7); border-radius: 20px; overflow: hidden; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); border-color: var(--accent); }
+        .card img { width: 100%; height: 150px; object-fit: cover; }
+        .card-body { padding: 15px; }
+        .tech-stack { font-size: 0.75rem; color: var(--accent); margin-top: 5px; }
+        .career-tag { font-size: 0.7rem; background: rgba(56, 189, 248, 0.1); padding: 4px 8px; border-radius: 8px; display: inline-block; margin-top: 10px; color: #fff; border: 1px solid rgba(56,189,248,0.3); }
+
+        /* FAQ */
+        .faq-card { background: rgba(30, 41, 59, 0.7); padding: 10px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.05); }
+        details { padding: 15px; border-bottom: 1px solid rgba(255,255,255,0.05); cursor: pointer; }
+        summary { font-weight: bold; color: var(--accent); }
+    </style>
+</head>
+<body>
+
+<header>
+    <a href="#" class="logo">ልማት Hub</a>
+    <nav>
+        <a href="#tr-grid">Tracks</a>
+        <a href="#h-faq">FAQ</a>
+        <a onclick="alert('Digital Ethiopia 2026: Vocational & Technical Initiative')">About Us</a>
+    </nav>
+</header>
+
+<div class="yellow-tracker">
+    <div class="scrolling-text">New: Modern Carpentry, Electrical, AI, and Cyber tracks now open. | Join 942,108 citizens today.</div>
+</div>
+
+<div class="container">
+    <div class="hero">
+        <h1>National Technical Hub</h1>
+        <p style="color:#94a3b8;">Enter your 10-Digit Fayda ID to access vocational and digital training.</p>
+        <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
+        <button onclick="alert('System Active: Developed by Robel')" class="v-btn">START CAREER</button>
+    </div>
+
+    <h2 class="section-h" id="tr-grid">Official Career Tracks</h2>
+    <div class="grid" id="course-grid"></div>
+
+    <h2 class="section-h" id="h-faq">Support & FAQ</h2>
+    <div class="faq-card" id="faq-list"></div>
+</div>
+
+<footer style="text-align:center; padding:40px; color:#475569; border-top: 1px solid rgba(255,255,255,0.05);">
+    © 2026 ልማት Hub | Developed by Robel
+</footer>
+
+<script>
+    // 10 Courses: 5 Tech + 5 Vocational/Trade
+    const tracks = [
+        {n: "Modern Carpentry", img: "https://images.unsplash.com/photo-1621290621119-7d1c103bc3f1?w=400", tech: "Furniture, Power Tools", job: "Master Carpenter"},
+        {n: "Electrical Systems", img: "https://images.unsplash.com/photo-1621905231727-07442373e43d?w=400", tech: "Solar, Smart Wiring", job: "Lead Electrician"},
+        {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400", tech: "Python, ML Models", job: "AI Specialist"},
+        {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400", tech: "Defense, Encryption", job: "Security Officer"},
+        {n: "Auto Mechanics", img: "https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=400", tech: "Hybrid/EV Diagnostics", job: "Auto Technician"},
+        {n: "Plumbing Tech", img: "https://images.unsplash.com/photo-1581244277943-fe4a9c777189?w=400", tech: "Piping, Modern Pumps", job: "Plumbing Engineer"},
+        {n: "Web Systems", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400", tech: "React, Node.js", job: "Full-Stack Dev"},
+        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400", tech: "SQL, Big Data", job: "Data Architect"},
+        {n: "Welding & Metal", img: "https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?w=400", tech: "ARC/MIG Fabrication", job: "Metal Specialist"},
+        {n: "UI/UX Design", img: "https://images.unsplash.com/photo-1586717791821-3f44a563eb4c?w=400", tech: "Figma, User Flow", job: "Product Designer"}
+    ];
+
+    const faqs = [
+        {q: "Is this for technical trades?", a: "Yes, we offer both high-tech digital skills and essential vocational trades like Carpentry and Electrical work."},
+        {q: "Are materials provided?", a: "For trade tracks, students are given a physical toolkit at their local Lemat hub center."},
+        {q: "Is the Fayda ID required?", a: "Yes, it verifies your citizenship and secures your certification records."},
+        {q: "Is there hands-on training?", a: "Trade courses include 60% practical work at accredited workshops across the country."},
+        {q: "Are these courses free?", a: "Every track in the 2026 Digital Mission is fully funded by national development partners."}
+    ];
+
+    function render() {
+        const g = document.getElementById('course-grid');
+        g.innerHTML = tracks.map(t => `
+            <div class="card">
+                <img src="${t.img}">
+                <div class="card-body">
+                    <div style="font-weight:bold;">${t.n}</div>
+                    <div class="tech-stack">${t.tech}</div>
+                    <div class="career-tag">${t.job}</div>
+                </div>
+            </div>
+        `).join('');
+
+        const f = document.getElementById('faq-list');
+        f.innerHTML = faqs.map(item => `
+            <details>
+                <summary>${item.q}</summary>
+                <p style="padding-top:10px; color:#94a3b8;">${item.a}</p>
+            </details>
+        `).join('');
+    }
+
+    render();
+</script>
+</body>
+</html>
